fix: Adjust controllers for use with tsoa.
