# backend/src/controllers/ItemController.ts
@@ -10,11 +10,13 @@ import {
   SuccessResponse,
   Response,
   Tags,
-  Security
+  Security,
+  Query
 } from "tsoa";
 
-import ItemRepository from "../repository/ItemRepository";
+import ItemService from "../services/ItemService";
 import { ErrorResponse, MessageResponse } from "../types/responses";
+import { PaginatedResponse } from "../dto/shared/PaginatedResponse.dto";
 
 interface ItemRequest {
   /** @example "Teclado Mecânico" */
@@ -41,29 +43,32 @@ export class ItemController extends Controller {
   @Post()
   @Security("jwt")
   @SuccessResponse(201, "Criado com sucesso")
-  @Response<ErrorResponse>(500, "Erro interno")
+  @Response<ErrorResponse>(400, "Erro de validação")
   public async create(
     @Body() requestBody: ItemRequest
   ): Promise<ItemResponse> {
 
-    try {
-      const item = await ItemRepository.create(requestBody);
-
-      this.setStatus(201);
-      return item as ItemResponse;
-
-    } catch (err: any) {
-      this.setStatus(500);
-      throw {
-        message: "Erro ao criar item",
-        error: err.message
-      };
-    }
+    const item = await ItemService.createItem(requestBody);
+    this.setStatus(201);
+    return item.toJSON() as ItemResponse;
   }
 
   @Get()
-  public async getAll(): Promise<ItemResponse[]> {
-    return await ItemRepository.findAll();
+  public async getAll(
+    @Query() page: number = 1,
+    @Query() limit: number = 10
+  ): Promise<PaginatedResponse<ItemResponse>> {
+
+    const result = await ItemService.getAllItems(page, limit);
+
+    return {
+    totalItems: result.total,
+    totalPages: result.totalPages,
+    currentPage: result.page,
+    items: result.items.map(item =>
+      item.toJSON()
+    ) as ItemResponse[]
+  };
   }
 
   @Get("{id}")
@@ -72,14 +77,8 @@ export class ItemController extends Controller {
     @Path() id: number
   ): Promise<ItemResponse> {
 
-    const item = await ItemRepository.findById(id);
-
-    if (!item) {
-      this.setStatus(404);
-      throw { message: "Item não encontrado" };
-    }
-
-    return item;
+    const item = await ItemService.getItemById(id);
+    return item.toJSON() as ItemResponse;
   }
 
   @Put("{id}")
@@ -87,17 +86,11 @@ export class ItemController extends Controller {
   @Response<MessageResponse>(404, "Não encontrado")
   public async update(
     @Path() id: number,
-    @Body() requestBody: ItemRequest
+    @Body() requestBody: Partial<ItemRequest>
   ): Promise<ItemResponse> {
 
-    const updated = await ItemRepository.update(id, requestBody);
-
-    if (!updated) {
-      this.setStatus(404);
-      throw { message: "Item não encontrado" };
-    }
-
-    return updated;
+    const updated = await ItemService.updateItem(id, requestBody);
+    return updated.toJSON() as ItemResponse;
   }
 
   @Delete("{id}")
@@ -107,13 +100,7 @@ export class ItemController extends Controller {
     @Path() id: number
   ): Promise<MessageResponse> {
 
-    const result = await ItemRepository.delete(id);
-
-    if (!result) {
-      this.setStatus(404);
-      throw { message: "Item não encontrado" };
-    }
-
+    await ItemService.deleteItem(id);
     return { message: "Item deletado com sucesso" };
   }
 }
