# backend/src/controllers/UserController.ts
@@ -1,14 +1,27 @@
-import { Controller, Get, Post, Put, Route, Body, Path, SuccessResponse, Response, Tags } from "tsoa";
-import { UserRepository } from '../repository/UserRepository';
-import { hashPassword } from '../utils/auth';
+import {
+  Controller,
+  Get,
+  Post,
+  Put,
+  Delete,
+  Route,
+  Body,
+  Path,
+  SuccessResponse,
+  Response,
+  Tags,
+  Query
+} from "tsoa";
+
 import { ErrorResponse, MessageResponse } from "../types/responses";
 import {
   CreateUserDTO,
   UpdateUserDTO,
   UserResponseDTO
 } from "../dto/user";
-const userRepository = new UserRepository();
 
+import UserService from "../services/UserService";
+import { PaginatedResponse } from "../dto/shared/PaginatedResponse.dto";
 
 @Route("users")
 @Tags("Usuários")
@@ -16,36 +29,31 @@ export class UserController extends Controller {
 
   @Post()
   @SuccessResponse(201, "Criado com sucesso")
-  @Response<ErrorResponse>(500, "Erro interno")
+  @Response<ErrorResponse>(400, "Erro de validação")
   public async create(
     @Body() requestBody: CreateUserDTO
   ): Promise<UserResponseDTO> {
-    try {
-      const { password, ...rest } = requestBody;
-      const hashedPassword = await hashPassword(password!);
 
-      const user = await userRepository.createUser({
-        ...rest,
-        password: hashedPassword,
-        role: 'USER'
-      });
+    try {
+      const user = await UserService.createUser(requestBody);
 
       this.setStatus(201);
-      return user as unknown as UserResponseDTO;
+
+      return user.get({ plain: true }) as UserResponseDTO;
 
     } catch (error: any) {
-      this.setStatus(500);
-      throw {
-        message: "Erro ao criar usuário",
-        error: error.message
-      };
+      this.setStatus(400);
+      throw { message: error.message };
     }
   }
 
   @Get()
-  public async getAll(): Promise<UserResponseDTO[]> {
-    const users = await userRepository.getAllUsers();
-    return users as unknown as UserResponseDTO[];
+  public async getAll(
+    @Query() page: number = 1,
+    @Query() limit: number = 10
+  ): Promise<PaginatedResponse<UserResponseDTO>> {
+
+    return await UserService.getAllUsers(page, limit);
   }
 
   @Get("{id}")
@@ -54,40 +62,46 @@ export class UserController extends Controller {
     @Path() id: number
   ): Promise<UserResponseDTO> {
 
-    const user = await userRepository.getUserById(id);
+    try {
+      const user = await UserService.getUserById(id);
+      return user.get({ plain: true }) as UserResponseDTO;
 
-    if (!user) {
+    } catch (error: any) {
       this.setStatus(404);
-      throw {
-        message: "Usuário não encontrado"
-      };
+      throw { message: error.message };
     }
-
-    return user as unknown as UserResponseDTO;
   }
 
   @Put("{id}")
   @Response<MessageResponse>(404, "Não encontrado")
-  @Response<ErrorResponse>(500, "Erro interno")
+  @Response<ErrorResponse>(400, "Erro de validação")
   public async update(
     @Path() id: number,
     @Body() requestBody: UpdateUserDTO
-  ): Promise<MessageResponse> {
+  ): Promise<UserResponseDTO> {
+
     try {
-      const updated = await userRepository.updateUser(id, requestBody);
+      const updated = await UserService.updateUser(id, requestBody);
+      return updated.get({ plain: true }) as UserResponseDTO;
 
-      if (!updated) {
-        this.setStatus(404);
-        throw { message: "Usuário não encontrado ou dados iguais" };
-      }
-
-      return { message: "Usuário atualizado com sucesso" };
     } catch (error: any) {
-      this.setStatus(500);
-      throw {
-        message: "Erro ao atualizar usuário",
-        error: error.message
-      };
+      this.setStatus(400);
+      throw { message: error.message };
+    }
+  }
+
+  @Delete("{id}")
+  @Response<MessageResponse>(404, "Não encontrado")
+  public async delete(
+    @Path() id: number
+  ): Promise<MessageResponse> {
+
+    try {
+      return await UserService.deleteUser(id);
+
+    } catch (error: any) {
+      this.setStatus(400);
+      throw { message: error.message };
     }
   }
 }
